[Feat] Marker에 Mouseover시 CustomOverlay 띄우기

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,11 +15,11 @@
 }
 
 .navbar__button {
-  @apply hidden cursor-pointer
+  @apply hidden cursor-pointer;
 }
 
 .navbar__list--item {
-  @apply cursor-pointer
+  @apply cursor-pointer;
 }
 
 .navbar__list--item:hover {
@@ -44,7 +44,7 @@
   }
 
   .navbar__list--item--mobile {
-    @apply cursor-pointer
+    @apply cursor-pointer;
   }
 
   .navbar__list--item--mobile:hover {
@@ -54,4 +54,8 @@
   .navbar__list--mobile {
     @apply flex flex-col gap-4 px-[18px] py-6;
   }
+}
+
+.info-window {
+  @apply bg-blue-900 text-white block text-sm text-center h-6 rounded-md px-2 leading-6;
 }
